--- a/views/home/infoHome.ejs
+++ b/views/home/infoHome.ejs
@@ -89,39 +89,39 @@
 				</div>
 				
 				<div class="infoHome_wrap_item">
-					<div class="infoHome_wrap_item-img"></div>
+					<div class="infoHome_wrap_item-img1"></div>
 					<div class="infoHome_wrap_item-des">
-						<p class="infoHome_wrap_item-name">Nguyễn Đương Thế</p>
+						<p class="infoHome_wrap_item-name">Th.s Nguyễn Tiến Đạt</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Khoa:</span>
-							Vật lý
+							<span></span>
+							Người hướng dẫn
 						</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Khóa:</span>
-							K64 VLC
+							<span></span>
+							
 						</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Mã sinh viên:</span>
-							19000595
+							<span></span>
+							
 						</p>
 					</div>
 				</div>
 				
 				<div class="infoHome_wrap_item">
-					<div class="infoHome_wrap_item-img"></div>
+					<div class="infoHome_wrap_item-img2"></div>
 					<div class="infoHome_wrap_item-des">
-						<p class="infoHome_wrap_item-name">Nguyễn Đương Thế</p>
+						<p class="infoHome_wrap_item-name">T.s Trần Vĩnh Thắng</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Khoa:</span>
-							Vật lý
+							<span></span>
+							Người hướng dẫn
 						</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Khóa:</span>
-							K64 VLC
+							<span></span>
+							
 						</p>
 						<p class="infoHome_wrap_item-param">
-							<span>Mã sinh viên:</span>
-							19000595
+							<span></span>
+							
 						</p>
 					</div>
 				</div>
