--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -4,7 +4,8 @@
 
 <header>
     <a href="/" class="header_link-logo">
-        <h1 class="header_logo">See</h1>
+        <!-- <img class="header_logo"></div> -->
+		<div class="header_logo"></div>
     </a>
 	<div class="nav_menu">
 		<i class="fa-solid fa-bars"></i>
