--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,11 +16,21 @@ html {
     font-size: 40px;
     margin-right: 24px;
     color: #4c5be6;
+	width: 100%;
+	height: 100%;
+	background-image:url('/images/logo_nav.svg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 
 }
 
 .header_link-logo {
+	display: block;
     text-decoration: none;
+	width: 140px;
+	height: 60px;
+	/* background: #333; */
 }
 
 header {
