--- a/views/admin/infodevice.ejs
+++ b/views/admin/infodevice.ejs
@@ -157,8 +157,8 @@
 const char* ssid = "name_wifi";
 const char* password = "password";
 String stt = "off";
-String serverName = "http://seed-data.run.goorm.io/admin/deployDt";
-String keyapi = "http://seed-data.run.goorm.app/admin/api/deviceData/your_keyapi";
+String serverName = "http://earth.edu.vn/admin/deployDt";
+String keyapi = "http://earth.edu.vn/admin/api/deviceData/your_keyapi";
 unsigned long lastTime = 0;
 unsigned long timerDelay = 1000;
 unsigned long slepTime;
