--- a/public/css/auth/login.css
+++ b/public/css/auth/login.css
@@ -8,24 +8,24 @@
 	/* margin-top:61px; */
 	width:100%;
 	height: 100vh;
-	background-image:url('/images/background_login.jpg');
+	background-image:url('/images/liaaa.jpg');
 	background-origin:center;
 	background-repeat:no-repeat;
 	background-size:cover;
 	display:flex;
-	
 }
 
 .login_box {
 	width:400px;
-	height:380px;
+	height:400px;
 	margin:auto;
-	box-shadow:3px 3px 12px 4px rgba(0,0,0,0.8);
+	/* box-shadow:3px 3px 12px 4px rgba(0,0,0,0.8); */
 	border-radius:8px;
 	display:flex;
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
+	border: solid 2px #aaa;
 }
 
 .login_box > form {
@@ -80,54 +80,49 @@
 }
 
 .login_input_item > input {
-	padding: 12px 24px 2px;
+	padding: 16px 0px 6px;
 	width:280px;
 	outline:none;
 	background:transparent;
 	border:none;
-	border-bottom:solid 1px #333;
-	color:#000;
+	border-bottom:solid 2px #aaa;
+	color:#eee;
 	font-size:16px;
-	text-shadow: 1px 1px 2px #888;
 }
 
 .login_input_item > input::placeholder {
-	color:#000;
-	font-size:16px;
-	text-shadow: 1px 1px 2px #ccc;
+	color:#eee;
+	font-size:14px;
 }
 
 .login_input_item > i {
 	position:absolute;
-	left:-4px;
-	color:#333;
+	right: 0;
+	color:#ccc;
 	top:50%;
 	transform:translatey(-50%);
-	text-shadow: 1px 1px 2px #ccc;
-	margin-top:4px;
-	font-size:18px;
+	font-size:16px;
+
 }
 
 .login_signup {
 	display:block;
-	color:#000;
+	color:#333;
 	font-size:14px;
 	margin-top:8px;
 	text-align:right;
 	margin-top:12px;
-	text-shadow: 1px 1px 1px #ccc;
 	font-style:italic;
 	font-weight:bold;
 }
 
 .login_fogotpass{
 	display:block;
-	color:#333;
+	color:#ccc;
 	font-size:14px;
 	margin-top:8px;
 	text-align:right;
 	font-weight:bold;
-	text-shadow: 1px 1px 2px #ccc;
 	font-style:italic;
 }
 
@@ -142,17 +137,18 @@
 	border:none;
 	border-radius:4px;
 	font-size:16px;
-	color:#ccc;
+	color:#333;
 	cursor:pointer;
 	letter-spacing:2px;
 	opacity:0.8;
-	background:#333;
+	background:#eee;
 	text-shadow: 1px 1px 6px #ccc;
+	font-weight: bold;
 }
 
 .login_btn:hover {
 	opacity:0.8;
-	background:#000;
+	background:#ccc;
 	
 }
 
@@ -163,7 +159,6 @@
 	top:0px;
 	left:50%;
 	transform:translatex(-50%);
-	text-shadow: 1px 1px 8px #aaa;
 	text-align:center;
 	line-height:1.4;
 	
