--- a/public/css/auth/newPassword.css
+++ b/public/css/auth/newPassword.css
@@ -7,7 +7,7 @@
 .login_container {
 	width:100%;
 	height: 100vh;
-	background-image:url('/images/background_login.jpg');
+	background-image:url('/images/liaaa.jpg');
 	background-origin:center;
 	background-repeat:no-repeat;
 	background-size:cover;
