--- a/public/css/auth/signup.css
+++ b/public/css/auth/signup.css
@@ -7,7 +7,7 @@
 .login_container {
 	width:100%;
 	height: 100vh;
-	background-image:url('/images/background_login.jpg');
+	background-image:url('/images/liaaa.jpg');
 	background-origin:center;
 	background-repeat:no-repeat;
 	background-size:cover;
@@ -79,34 +79,30 @@
 }
 
 .login_input_item > input {
-	padding: 12px 24px 2px;
+	padding: 12px 0px 10px;
 	width:280px;
 	outline:none;
 	background:transparent;
 	border:none;
-	border-bottom:solid 1px #333;
-	color:#000;
-	font-size:16px;
-	text-shadow: 1px 1px 2px #ccc;
+	border-bottom:solid 2px #aaa;
+	color:#eee;
+	font-size:14px;
 	text-decoration:none;
 }
 
 .login_input_item > input::placeholder {
-	color:#000;
-	font-size:16px;
-	text-shadow: 1px 1px 2px #ccc;
-	
+	color:#eee;
+	font-size:14px;
 }
 
 .login_input_item > i {
 	position:absolute;
-	left:-4px;
-	color:#333;
+	right: 0;
+	color:#aaa;
 	top:50%;
 	transform:translatey(-50%);
-	text-shadow: 1px 1px 2px #ccc;
 	margin-top:2px;
-	font-size:20px;
+	font-size:16px;
 }
 
 .login_signup {
@@ -126,7 +122,6 @@
 	margin-top:8px;
 	text-align:right;
 	font-weight:bold;
-	text-shadow: 1px 1px 2px #ccc;
 }
 
 .login_signup:hover,
@@ -140,17 +135,18 @@
 	border:none;
 	border-radius:4px;
 	font-size:16px;
-	color:#ccc;
+	color:#333;
 	cursor:pointer;
 	letter-spacing:2px;
 	opacity:0.8;
-	background:#333;
+	background:#ccc;
 	text-shadow: 1px 1px 6px #ccc;
+	font-weight: bold;
 }
 
 .login_btn:hover {
 	opacity:0.8;
-	background:#000;
+	background:#fff;
 	
 }
 
@@ -161,7 +157,6 @@
 	top:0px;
 	left:50%;
 	transform:translatex(-50%);
-	text-shadow: 1px 1px 8px #aaa;
 	text-align:center;
 	line-height:1.4;
 	
