--- a/views/home/infoHome.ejs
+++ b/views/home/infoHome.ejs
@@ -35,7 +35,7 @@
 				</div>
 				
 				<div class="todo_item">
-					<div class="todo_img"></div>
+					<div class="todo_img1"></div>
 					<div class="todo_des">
 						<p class="todo_des-param">
 							Mô tả sản phẩm và quá trình làm việc
@@ -44,7 +44,7 @@
 				</div>
 				
 				<div class="todo_item">
-					<div class="todo_img"></div>
+					<div class="todo_img2"></div>
 					<div class="todo_des">
 						<p class="todo_des-param">
 							Mô tả sản phẩm và quá trình làm việc
@@ -53,7 +53,7 @@
 				</div>
 				
 				<div class="todo_item">
-					<div class="todo_img"></div>
+					<div class="todo_img3"></div>
 					<div class="todo_des">
 						<p class="todo_des-param">
 							Mô tả sản phẩm và quá trình làm việc
