--- a/public/css/infoHome.css
+++ b/public/css/infoHome.css
@@ -72,7 +72,46 @@
 	animation : backmymove ease 0.6s;
 }
 
-.todo_img:hover {
+.todo_img1 {
+	width:100%;
+	height:260px;
+	background:url("/images/todo1.jpg");
+	border-top-left-radius:8px;
+	border-top-right-radius:8px;
+	cursor:pointer;
+	background-size: 300px;
+	background-position: center;
+	animation : backmymove ease 0.6s;
+}
+
+.todo_img2 {
+	width:100%;
+	height:260px;
+	background:url("/images/todo2.jpg");
+	border-top-left-radius:8px;
+	border-top-right-radius:8px;
+	cursor:pointer;
+	background-size: 360px;
+	background-position: center;
+	animation : backmymove ease 0.6s;
+}
+
+.todo_img3 {
+	width:100%;
+	height:260px;
+	background:url("/images/todo3.jpg");
+	border-top-left-radius:8px;
+	border-top-right-radius:8px;
+	cursor:pointer;
+	background-size: 360px;
+	background-position: center;
+	animation : backmymove ease 0.6s;
+}
+
+.todo_img:hover,
+.todo_img1:hover,
+.todo_img2:hover,
+.todo_img3:hover {
 	animation: mymove ease 0.6s;
 	background-size: 500px;
 }
@@ -149,7 +188,7 @@
 .infoHome_wrap_item-img {
 	width:50%;
 	height:200px;
-	background:url("/images/ava1.jpg") center /cover no-repeat;
+	/* background:url("/images/ava1.jpg") center /cover no-repeat; */
 	border-top-left-radius:10px;
 	border-bottom-left-radius:10px;
 }
